tests/agl/rejections/scope/catch_var_escapes.agl
try
  ()
catch _ as err =>
  ()
print err
